# magiclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PR_DESCRIPTION.md  PR_PHASE_A_TASKS_2_5.md  README.md  RUST_MIGRATION_V5.md  aiclaw.config.example.json  magiclaw.config.example.json
docs/: 2026-06-19-claude-code-backend-plan.md  2026-06-19-phase1-plan.md  2026-06-19-project-binding-and-multi-push-design.md  2026-06-19-user-agent-preferences-design.md  2026-06-20-dynamic-api-auth-design.md  2026-06-23-feishu-push-architecture.md  2026-06-23-feishu-push-plan.md  2026-06-23-p0-fixes-implementation-report.md  2026-06-23-phase-a-checklist.md  2026-06-23-phase-a-completion-report.md  2026-06-23-wechat-send-stability-design.md  2026-06-23-wechat-send-stability-log.md  2026-06-23-wechat-send-stability-plan.md  2026-06-28-bugs.md  2026-06-28-development-status.md  2026-06-28-integration-index.md  2026-06-28-optimization-backlog.md  2026-06-28-project-design.md  claude-code-backend-challenge.md  claude-code-backend-design.md  claude-code-backend-plan.md  implementation-gap-solution.md  implementation-gap-task-breakdown.md  mcp-deployment.md  media-streaming-upload-design.md  media-streaming-upload-plan.md  phase1-architecture.md  phase1.5-architecture.md  phase2-architecture.md  phase3-architecture.md  phase4-architecture.md  wechat-context-token-final-review.md  wechat-context-token-review.md  wechat-context-token-robustness-design.md
scripts/: daemon-up.sh  install-mcp.sh  wechat-peer-concurrency-test.sh
src/: lib.rs  main.rs
tests/: audit_chain_closed_loop.rs  audit_send_closed_loop.rs  claude_code_backend_closed_loop.rs  cli_agent_backend_closed_loop.rs  conversation_state_closed_loop.rs  daemon_api_auth_closed_loop.rs  db_pool_closed_loop.rs  (+16 more)
(+112 files in other folders)
